# fitness.app

./: Cargo.toml  appdata.json
src/: app.rs  appdata.json  main.rs  models.rs  muscles.rs  tools.rs  ui.rs
